--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Tascs</string>
     <string name="login">Login</string>
+    <string name="password">password</string>
+    <string name="email_address">email address</string>
 </resources>
