addded new string values inthe string fiel to avoid raw text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="login">Login</string>
     <string name="password">password</string>
     <string name="email_address">email address</string>
+    <string name="username">username</string>
+    <string name="no_account_signup_now">No Account? SignUp Now</string>
+    <string name="account_signup_now">Got an Account? SignIn Now</string>
+    <string name="signup">SIGN UP</string>
+    <string name="residence">residence</string>
+    <string name="username2">lastname</string>
+    <string name="username1">firstname</string>
 </resources>
